err/pkglts.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Unidecode-1.0.22.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pkglts'...
Listing './lib/python3.5/site-packages/pkglts/install_env'...
Listing './lib/python3.5/site-packages/pkglts/option'...
Listing './lib/python3.5/site-packages/pkglts/option/base'...
Listing './lib/python3.5/site-packages/pkglts/option/base/resource'...
Listing './lib/python3.5/site-packages/pkglts/option/base/resource/src'...
Listing './lib/python3.5/site-packages/pkglts/option/base/resource/src/{{ base.pkgname }}'...
Listing './lib/python3.5/site-packages/pkglts/option/conda'...
Listing './lib/python3.5/site-packages/pkglts/option/conda/resource'...
Listing './lib/python3.5/site-packages/pkglts/option/conda/resource/conda'...
Listing './lib/python3.5/site-packages/pkglts/option/coverage'...
Listing './lib/python3.5/site-packages/pkglts/option/coverage/resource'...
Listing './lib/python3.5/site-packages/pkglts/option/coveralls'...
Listing './lib/python3.5/site-packages/pkglts/option/data'...
Listing './lib/python3.5/site-packages/pkglts/option/data/example'...
Listing './lib/python3.5/site-packages/pkglts/option/data/example/src'...
Listing './lib/python3.5/site-packages/pkglts/option/data/example/src/{{ base.pkgname }}'...
Listing './lib/python3.5/site-packages/pkglts/option/data/example/src/{{ base.pkgname }}/sub'...
Listing './lib/python3.5/site-packages/pkglts/option/data/example/src/{{ base.pkgname }}_data'...
Listing './lib/python3.5/site-packages/pkglts/option/data/example/src/{{ base.pkgname }}_data/sub'...
Listing './lib/python3.5/site-packages/pkglts/option/data/example/test'...
Listing './lib/python3.5/site-packages/pkglts/option/data/resource'...
Listing './lib/python3.5/site-packages/pkglts/option/data/resource/src'...
Listing './lib/python3.5/site-packages/pkglts/option/data/resource/src/{% if data.use_ext_dir %}{{ base.pkgname }}_data{% endif %}'...
Listing './lib/python3.5/site-packages/pkglts/option/data/resource/src/{{ base.pkgname }}'...
Listing './lib/python3.5/site-packages/pkglts/option/doc'...
Listing './lib/python3.5/site-packages/pkglts/option/doc/example'...
Listing './lib/python3.5/site-packages/pkglts/option/doc/example/doc'...
Listing './lib/python3.5/site-packages/pkglts/option/doc/resource'...
Listing './lib/python3.5/site-packages/pkglts/option/doc/resource/doc'...
Listing './lib/python3.5/site-packages/pkglts/option/doc/resource/doc/_static'...
Listing './lib/python3.5/site-packages/pkglts/option/flake8'...
Listing './lib/python3.5/site-packages/pkglts/option/git'...
Listing './lib/python3.5/site-packages/pkglts/option/git/resource'...
Listing './lib/python3.5/site-packages/pkglts/option/github'...
Listing './lib/python3.5/site-packages/pkglts/option/gitlab'...
Listing './lib/python3.5/site-packages/pkglts/option/landscape'...
Listing './lib/python3.5/site-packages/pkglts/option/landscape/resource'...
Listing './lib/python3.5/site-packages/pkglts/option/license'...
Listing './lib/python3.5/site-packages/pkglts/option/license/resource'...
Listing './lib/python3.5/site-packages/pkglts/option/license/templates'...
Listing './lib/python3.5/site-packages/pkglts/option/notebook'...
Listing './lib/python3.5/site-packages/pkglts/option/plugin_project'...
Listing './lib/python3.5/site-packages/pkglts/option/plugin_project/example'...
Listing './lib/python3.5/site-packages/pkglts/option/plugin_project/example/src'...
Listing './lib/python3.5/site-packages/pkglts/option/plugin_project/example/src/{{ base.pkgname }}'...
Listing './lib/python3.5/site-packages/pkglts/option/plugin_project/example/src/{{ base.pkgname }}/resource'...
Listing './lib/python3.5/site-packages/pkglts/option/plugin_project/resource'...
Listing './lib/python3.5/site-packages/pkglts/option/plugin_project/resource/src'...
Listing './lib/python3.5/site-packages/pkglts/option/plugin_project/resource/src/{{ base.pkgname }}'...
Listing './lib/python3.5/site-packages/pkglts/option/pypi'...
Listing './lib/python3.5/site-packages/pkglts/option/pypi/resource'...
Listing './lib/python3.5/site-packages/pkglts/option/pysetup'...
Listing './lib/python3.5/site-packages/pkglts/option/pysetup/resource'...
Listing './lib/python3.5/site-packages/pkglts/option/readthedocs'...
Listing './lib/python3.5/site-packages/pkglts/option/requires'...
Listing './lib/python3.5/site-packages/pkglts/option/sphinx'...
Listing './lib/python3.5/site-packages/pkglts/option/sphinx/example'...
Listing './lib/python3.5/site-packages/pkglts/option/sphinx/example/doc'...
Listing './lib/python3.5/site-packages/pkglts/option/sphinx/example/doc/docexamples'...
Listing './lib/python3.5/site-packages/pkglts/option/sphinx/example/src'...
Listing './lib/python3.5/site-packages/pkglts/option/sphinx/example/src/{{ base.pkgname }}'...
Listing './lib/python3.5/site-packages/pkglts/option/sphinx/resource'...
Listing './lib/python3.5/site-packages/pkglts/option/sphinx/resource/doc'...
Listing './lib/python3.5/site-packages/pkglts/option/test'...
Listing './lib/python3.5/site-packages/pkglts/option/test/example'...
Listing './lib/python3.5/site-packages/pkglts/option/test/example/src'...
Listing './lib/python3.5/site-packages/pkglts/option/test/example/src/{{ base.pkgname }}'...
Listing './lib/python3.5/site-packages/pkglts/option/test/example/test'...
Listing './lib/python3.5/site-packages/pkglts/option/test/resource'...
Listing './lib/python3.5/site-packages/pkglts/option/test/resource/test'...
Listing './lib/python3.5/site-packages/pkglts/option/tox'...
Listing './lib/python3.5/site-packages/pkglts/option/tox/resource'...
Listing './lib/python3.5/site-packages/pkglts/option/travis'...
Listing './lib/python3.5/site-packages/pkglts/option/travis/resource'...
Listing './lib/python3.5/site-packages/pkglts/option/version'...
Listing './lib/python3.5/site-packages/pkglts/option/version/resource'...
Listing './lib/python3.5/site-packages/pkglts/option/version/resource/src'...
Listing './lib/python3.5/site-packages/pkglts/option/version/resource/src/{{ base.pkgname }}'...
Listing './lib/python3.5/site-packages/pkglts/resource'...
Listing './lib/python3.5/site-packages/pkglts/tool'...
Listing './lib/python3.5/site-packages/pkglts-2.2.1.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/semver-2.7.9.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/unidecode'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
